Created NotUniqueNicknameException. Add logic for checking on unique nickname. Add constant message NOT_UNIQUE_NICKNAME. Refactoring in project.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 input.string.data=Input 
 input.wrong.data=Wrong input! Repeat please 
+not.unique.nickname.data=This nickname is already taken. Please, choose different one
 
 input.name.data=first name in format [A-Z][a-z]{1,20}
 input.surname.data=surname in format [A-Z][a-z]{1,20}
